--- a/web/projects/portal/src/app/vsobjects/objects/table/vs-crosstab.component.scss
+++ b/web/projects/portal/src/app/vsobjects/objects/table/vs-crosstab.component.scss
@@ -65,6 +65,7 @@ $stacking-order: (
 
 table {
   table-layout: fixed;
+  border-collapse: collapse;
 }
 
 #cell-dropdown-menu {
