--- a/web/projects/portal/src/app/vsobjects/objects/table/vs-table.component.scss
+++ b/web/projects/portal/src/app/vsobjects/objects/table/vs-table.component.scss
@@ -42,6 +42,10 @@ $stacking-order: (
   position: relative;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 .table-cell {
   overflow: visible;
 }
